--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="css/style.css" />
     <link
       rel="stylesheet"
-      media="screen and (max-width: 768px"
+      media="screen and (max-width: 768px)"
       href="css/mobile.css"
     />
     <script src="https://kit.fontawesome.com/c6fc1805bb.js"></script>
-    <title>HBT</title>
+    <title>Hotel BT | Welcome</title>
   </head>
   <body>
     <header>
