--- a/about.html
+++ b/about.html
@@ -10,13 +10,13 @@
       media="screen and (max-width: 768px"
       href="css/mobile.css"
     />
-    <title>HBT | About</title>
+    <title>Black Hotel | Contact</title>
   </head>
   <body>
     <header>
       <nav id="navbar">
         <div class="container">
-          <h1 class="logo m-heading"><a href="index.html">HBT</a></h1>
+          <h1 class="logo m-heading"><a href="index.html">Black Hotel</a></h1>
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a class="current" href="about.html">About</a></li>
@@ -30,18 +30,14 @@
       <div class="container">
         <div class="info-left">
           <h1 class="l-heading">
-            <span class="text-primary">About</span> Hotel BT
+            <span class="text-primary">About</span> Black Hotel
           </h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
-            voluptatem quidem vero autem? Voluptatum aliquid incidunt porro
-            libero quo! Deleniti velit saepe officia ut autem architecto
-            cupiditate illum consectetur cumque!
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
-            voluptatem temporibus nulla modi ratione accusamus molestiae esse
-            numquam qui quod.
+            Welcome to The Black Hotel. Located in the heart of the Sydney, we
+            are a Boutique Hotel with a reputation built around quality and
+            friendly service. The Black Hotel offers the finest accommodation,
+            elegant dining in Nobles Restaurant & Bar, extensive conference and
+            event facilities or relaxation at the Day Spa.
           </p>
         </div>
         <div class="info-right">
@@ -58,28 +54,30 @@
         <div class="testimonial bg-primary">
           <img src="./img/person-1.jpg" alt="Samantha" />
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, ullam
-            veritatis obcaecati non, a nam pariatur ut in unde, velit aliquam
-            illo hic iure blanditiis. Excepturi dolores modi, asperiores, quidem
-            ipsam voluptate aspernatur velit hic facere fuga repudiandae
-            blanditiis optio.
+            I come here when I need time to plan and dream. The rooms are very
+            spacious and inviting. The Black Hotel is excellent and the service
+            is great. Enjoyed the facilities, large rooms, comfy beds, yummy
+            breakfast. Staff were efficient, helpful polite and patient. Garden
+            area was spacious and a lovely area for cocktail function. Good
+            range of drinks available too.
           </p>
         </div>
         <div class="testimonial bg-primary">
           <img src="./img/person-2.jpg" alt="Jen" />
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, ullam
-            veritatis obcaecati non, a nam pariatur ut in unde, velit aliquam
-            illo hic iure blanditiis. Excepturi dolores modi, asperiores, quidem
-            ipsam voluptate aspernatur velit hic facere fuga repudiandae
-            blanditiis optio.
+            My husband and I recently stayed at The Black Hotel for several
+            weeks with our two young children and we were so happy with the
+            service we received and the quality of the hotel. The staff were so
+            helpful and friendly! Their catering and hospitality are exceptional
+            and will not let you down. the staff were successfully able to cater
+            to any dietary.
           </p>
         </div>
       </div>
     </div>
 
     <footer id="main-footer">
-      <p>Hotel BT &copy; 2019, All Rights Reserved</p>
+      <p>Black Hotel &copy; 2019, All Rights Reserved</p>
     </footer>
   </body>
 </html>
