--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,13 @@
       href="css/mobile.css"
     />
     <script src="https://kit.fontawesome.com/c6fc1805bb.js"></script>
-    <title>Hotel BT | Contact</title>
+    <title>Black Hotel | Contact</title>
   </head>
   <body>
     <header>
       <nav id="navbar">
         <div class="container">
-          <h1 class="logo m-heading"><a href="index.html">HBT</a></h1>
+          <h1 class="logo m-heading"><a href="index.html">Black Hotel</a></h1>
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
@@ -30,7 +30,7 @@
     <section id="contact-form" class="py-3">
       <div class="container">
         <h1 class="l-heading"><span class="text-primary">Contact</span> Us</h1>
-        <p>Please fill out the form below to contact us</p>
+        <p>Please fill out the form below to contact us.</p>
         <form name="contact" method="POST" data-netlify="true">
           <div class="form-group">
             <label for="name">Name</label>
@@ -55,28 +55,28 @@
           <i class="fas fa-hotel fa-3x"></i>
           <h3>Location</h3>
           <p>
-            50 Main St, Bostion MA
+            1 Main Rd, Black Hill
           </p>
         </div>
         <div class="box">
           <i class="fas fa-phone fa-3x"></i>
           <h3>Phone Number</h3>
           <p>
-            (617) 555-5555
+            +612 8888 8888
           </p>
         </div>
         <div class="box">
           <i class="fas fa-envelope fa-3x"></i>
           <h3>Email Address</h3>
           <p>
-            frontdesk@hotelbt.com
+            bookings@blackhotel.com
           </p>
         </div>
       </div>
     </section>
 
     <footer id="main-footer">
-      <p>Hotel BT &copy; 2019, All Rights Reserved</p>
+      <p>Black Hotel &copy; 2019, All Rights Reserved</p>
     </footer>
   </body>
 </html>
