--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
       href="css/mobile.css"
     />
     <script src="https://kit.fontawesome.com/c6fc1805bb.js"></script>
-    <title>Hotel BT | Welcome</title>
+    <title>Black Hotel | Contact</title>
   </head>
   <body>
     <header>
       <nav id="navbar">
         <div class="container">
-          <h1 class="logo m-heading"><a href="index.html">HBT</a></h1>
+          <h1 class="logo m-heading"><a href="index.html">Black Hotel</a></h1>
           <ul>
             <li><a class="current" href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
@@ -31,9 +31,8 @@
           <div class="showcase-content">
             <h1><span class="text-primary">Enjoy</span> Your Stay</h1>
             <p class="lead">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
-              explicabo possimus hic corporis in quaerat ad, nihil fugit dolores
-              obcaecati!
+              Places to create truly unforgettable memories. Opening doors to a
+              world of sophistication and awe.
             </p>
             <a class="btn" href="about.html">About Our Hotel</a>
           </div>
@@ -44,11 +43,12 @@
     <section id="home-info" class="bg-dark">
       <div class="info-img"></div>
       <div class="info-content">
-        <h2><span class="text-primary">The History</span> of Our Hotel</h2>
+        <h2><span class="text-primary">The History</span> of Black Hotel</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque,
-          commodi explicabo perferendis est corporis quibusdam ipsa. Eligendi
-          blanditiis inventore deserunt.
+          The Black Hotel welcome you for the most unforgettable stays. From
+          luxury to economy, from aparthotels to thalasso, make the most of a
+          wide choice of destinations to compose your vacations, live your
+          dreams and rediscover the meaning of world travel.
         </p>
         <a href="about.html" class="btn btn-light">Read More</a>
       </div>
@@ -59,24 +59,24 @@
         <i class="fas fa-hotel fa-3x"></i>
         <h3>Great Location</h3>
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum,
-          illo!
+          Located in the heart of the Sydney. we are a Boutique Hotel with a
+          reputation built around quality and friendly service.
         </p>
       </div>
       <div class="box bg-primary">
         <i class="fas fa-utensils fa-3x"></i>
-        <h3>Free Meals</h3>
+        <h3>Dining</h3>
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum,
-          illo!
+          The Black Hotel offers exciting dining experiences for every guest.
+          Serving Sydney’s freshest seafood from NSW.
         </p>
       </div>
       <div class="box bg-light">
         <i class="fas fa-dumbbell fa-3x"></i>
         <h3>Fitness Room</h3>
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum,
-          illo!
+          Our fitness centre equipped with cardio machines and strength training
+          equipment. Enjoy Darling Harbour.
         </p>
       </div>
     </section>
@@ -84,7 +84,7 @@
     <div class="clr"></div>
 
     <footer id="main-footer">
-      <p>Hotel BT &copy; 2019, All Rights Reserved</p>
+      <p>Black Hotel &copy; 2019, All Rights Reserved</p>
     </footer>
   </body>
 </html>
